references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/FeaturePath_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:5e2e3d2bab8f06ccfbd506325cbb8fa7084f4144064f1b5b0590bf351bad2daf
size 1758
